2nd commit switching to pc

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
         <a href="#">About Us</a>
         <button>Sign Up</button>
     </nav>
+
+    <h1>Empowering Students 
+        Maximizing Productivity</h1>
 </body>
 </html>
