--- a/index.html
+++ b/index.html
@@ -1,19 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FocusBox</title>
-</head>
-<body>
-    <nav>
-        <a href="#">FocusBox</a>
-        <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <button>Sign Up</button>
-    </nav>
+    <link rel="icon" href="Product 1.png" type="image/png" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">FocusBox</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><button>Sign Up</button></li>
+        </ul>
+      </nav>
+    </header>
 
-    <h1>Empowering Students 
-        Maximizing Productivity</h1>
-</body>
+    <section id="Landing-Section">
+      <h1>Empowering Students Maximizing Productivity</h1>
+      <p>
+        FocusBox helps students stay organized and focused on what matters most,
+        with simple tools to track tasks, set priorities, and meet deadlines.
+        Stay on top of your goals and achieve more, one task at a time.
+      </p>
+      <button>Get Started</button>
+      <img src="Product 1.png" style="width: 75%" />
+    </section>
+
+    <section id="Product-Details-1">
+      <h2>Maximize Productivity</h2>
+      <p>
+        FocusBox provides the tools you need to stay organized, manage your time
+        effectively, and keep you focused on reaching your goals, making task
+        management simple and stress-free.
+      </p>
+      <img href="" />
+      <img href="" />
+      <img href="" />
+      <h2>How it Works?</h2>
+      <p>
+        FocusBox simplifies task management with an easy-to-use setup. Create
+        tasks, set priorities, and stay on track with reminders, all in one
+        place.
+      </p>
+      <img href="" />
+      <h3>Sign Up & Set Up</h3>
+      <p>
+        Create your account and personalize your dashboard to get started with
+        task management.
+      </p>
+      <img href="" />
+      <h3>Add Tasks</h3>
+      <p>
+        Never miss a deadline by setting reminders and prioritizing tasks to
+        stay on top of your goals.
+      </p>
+      <img href="" />
+      <h3>Set Reminders</h3>
+      <p>
+        Never miss a deadline by setting reminders and prioritizing tasks to
+        stay on top of your goals.
+      </p>
+    </section>
+    <section id="Product-Details-2">
+      <h2>How FocusBox helps you?</h2>
+      <p>
+        FocusBox provides the tools you need to stay organized, manage your time
+        effectively, and keep you focused on reaching your goals, making task
+        management simple and stress-free.
+      </p>
+    </section>
+  </body>
 </html>
