--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FocusBox</title>
-    <link rel="icon" href="Product 1.png" type="image/png" />
+    <!--Code for Favicon, that appears in the tab-->
+    <link rel="icon" href="img-landingpage/Product 1.png" type="image/png" />
+    <!--Allows to add the Roboto Font to the Code-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -26,7 +33,7 @@
         Stay on top of your goals and achieve more, one task at a time.
       </p>
       <button>Get Started</button>
-      <img src="Product 1.png" style="width: 75%" />
+      <img src="img-landingpage/Product 1.png" style="width: 75%" />
     </section>
 
     <section id="Product-Details-1">
@@ -36,28 +43,28 @@
         effectively, and keep you focused on reaching your goals, making task
         management simple and stress-free.
       </p>
-      <img href="" />
-      <img href="" />
-      <img href="" />
+      <img src="img-landingpage/Productdisp-1.png" style="width: 30%" />
+      <img src="img-landingpage/Productdisp-2.png" style="width: 30%" />
+      <img src="img-landingpage/Productdisp-3.png" style="width: 30%" />
       <h2>How it Works?</h2>
       <p>
         FocusBox simplifies task management with an easy-to-use setup. Create
         tasks, set priorities, and stay on track with reminders, all in one
         place.
       </p>
-      <img href="" />
+      <img src="img-landingpage/add-friend.png" />
       <h3>Sign Up & Set Up</h3>
       <p>
         Create your account and personalize your dashboard to get started with
         task management.
       </p>
-      <img href="" />
+      <img src="img-landingpage/tasks.png" />
       <h3>Add Tasks</h3>
       <p>
         Never miss a deadline by setting reminders and prioritizing tasks to
         stay on top of your goals.
       </p>
-      <img href="" />
+      <img src="img-landingpage/send.png" />
       <h3>Set Reminders</h3>
       <p>
         Never miss a deadline by setting reminders and prioritizing tasks to
@@ -72,5 +79,7 @@
         management simple and stress-free.
       </p>
     </section>
+
+    <section id="FAQs"></section>
   </body>
 </html>
