--- a/index.html
+++ b/index.html
@@ -78,8 +78,86 @@
         effectively, and keep you focused on reaching your goals, making task
         management simple and stress-free.
       </p>
+      <img src="img-landingpage/Productdisp-4.png" style="width: 75%" />
+      <h3>1</h3>
+      <h3>Enhanced Focus</h3>
+      <p>
+        Stay focused on what truly matters by organizing tasks and setting clear
+        priorities.
+      </p>
+
+      <h3>2</h3>
+      <h3>Improved Time Management</h3>
+      <p>
+        Stay focused on what truly matters by organizing tasks and setting clear
+        priorities.
+      </p>
+
+      <h3>3</h3>
+      <h3>Increased Productivity</h3>
+      <p>
+        Break down tasks into manageable steps, helping you achieve more with
+        less stress.
+      </p>
+
+      <h3>4</h3>
+      <h3>Goal Achievement</h3>
+      <p>
+        Stay motivated and on track to meet your academic and personal goals
+        through structured task management.
+      </p>
     </section>
 
-    <section id="FAQs"></section>
+    <section id="FAQs">
+      <h2>Here are some Frequently Asked Questions</h2>
+      <p>
+        Explore our comprehensive FAQ section, designed to answer all your
+        pressing questions about FocusBox. From Technical support to feature
+        explainations.
+      </p>
+      <p>What is a FocusBox?</p>
+      <p>ANS</p>
+      <p>How can FocusBox help me?</p>
+      <p>ANS</p>
+      <p>Is FocusBox a paid software?</p>
+      <p>ANS</p>
+      <p>Can I categorize my tasks in Focus Box?</p>
+      <p>ANS</p>
+      <p>How can FocusBox help me get good grades in exams?</p>
+      <p>ANS</p>
+      <p>Can I add my friend in my Task Box?</p>
+      <p>ANS</p>
+      <p>Why is FocusBox is better than other task managers?</p>
+      <p>ANS</p>
+      <p>How to get started with FocusBox?</p>
+      <p>ANS</p>
+      <img src="img-landingpage/Productdisp-5.png" style="width: 40%" />
+    </section>
+
+    <>
+      <h2>FocusBox</h2>
+      <p>
+        Developed to help students stay organized, simplifying task management,
+        enabling better focus, time management, and goal achievement.
+      </p>
+      <h3>Navigate</h3>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Sign Up</a></li>
+        <li><a href="#">Sign In</a></li>
+      </ul>
+      <h3>Company</h3>
+      <ul>
+        <li><a href="#">Terms & Conditions</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Cookies Preferences</a></li>
+      </ul>
+      <h3>Download App</h3>
+      <button><img src="img-landingpage/Google-play.png" />Google Play</button>
+      <button><img src="img-landingpage/App-store.png" />App Store</button>
+      <hr>
+      <p> © 2024 Developed by the Uzumaki Clan - All Rights Reserved</p>
+    </footer>
   </body>
 </html>
