--- a/index.html
+++ b/index.html
@@ -295,14 +295,20 @@
       .FAQsSesction{
         display: flex;
         margin-top: 40px;
-        margin-left: 130px;
+        margin-left: 145px;
         margin-right: 130px;
-        gap: 25px;
+        margin-bottom: 80px;
+        gap: 60px;
         font-size: 25px;
         line-height: 0.8em;
       }
       .FAQsSesction img{
-        height: 700px;
+        height: 600px;
+        width: 550px;
+      }
+      .FAQs p{
+        border-bottom: 3px #3353FF solid;
+        padding-bottom: 20px;
       }
       /*<-----------------Page-04---------------->*/
       /*<-----------------Page-05---------------->*/
@@ -316,6 +322,12 @@
       footer a{
         text-decoration: none;
         color:white;
+      }
+      footer h2{
+        color: #3353FF;
+      }
+      footer h3{
+        color: #3353FF;
       }
       .sub-footer{
         display: flex;
@@ -556,21 +568,13 @@
       <div class="FAQsSesction">
       <div class="FAQs">
       <p>What is a FocusBox?</p>
-      <p>ANS</p>
       <p>How can FocusBox help me?</p>
-      <p>ANS</p>
       <p>Is FocusBox a paid software?</p>
-      <p>ANS</p>
       <p>Can I categorize my tasks in Focus Box?</p>
-      <p>ANS</p>
       <p>How can FocusBox help me get good grades in exams?</p>
-      <p>ANS</p>
       <p>Can I add my friend in my Task Box?</p>
-      <p>ANS</p>
       <p>Why is FocusBox is better than other task managers?</p>
-      <p>ANS</p>
       <p>How to get started with FocusBox?</p>
-      <p>ANS</p>
     </div>
       <img src="img-landingpage/Productdisp-5.png" />
     </div>
