Sign up, log in and the landing page are done

--- a/Main-signin.html
+++ b/Main-signin.html
@@ -162,7 +162,7 @@
   <body>
     <div class="container">
       <div class="form">
-        <a href="#" class="back-btn">← Back</a>
+        <a href="Main-signup.html" class="back-btn">← Back</a>
 
         <h1>Sign In</h1>
         <p>
@@ -192,7 +192,7 @@
         </form>
 
         <p class="signup-link">
-          Don’t have an account? <a href="signup.html">Sign Up</a>
+          Don’t have an account? <a href="Main-signup.html">Sign Up</a>
         </p>
       </div>
 
