--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
           <li><img src="img-landingpage/Logo.png" alt="FocusBox Logo" style="width: 100px; height: 25px;"/></li>
           <li><a href="#">Home</a></li>
           <li><a href="#">About Us</a></li>
-          <li><button id="signUp-btn">Sign Up</button></li>
+          <li><button id="signUp-btn" onclick="location.href='Main-signup.html'">Sign Up</button></li>
         </ul>
       </nav>
     </header>
@@ -432,7 +432,7 @@
           with<br> simple tools to track tasks, set priorities, and meet<br> deadlines.
           Stay on top of your goals and achieve<br> more, one task at a time.
         </p>
-        <button class="getStarted-btn">Get Started</button>
+        <button class="getStarted-btn" onclick="location.href='Main-signup.html'">Get Started</button>
       </div>
       <img src="img-landingpage/Product 1.png" id="Dashboard-img" alt="FocusBox Dashboard" style="width: 75%" />
     </section>
@@ -595,23 +595,23 @@
         <h3>Navigate</h3>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Sign Up</a></li>
-          <li><a href="#">Sign In</a></li>
+          <li><a href="#Product-Details-2">About Us</a></li>
+          <li><a href="Main-signup.html">Sign Up</a></li>
+          <li><a href="Main-signin.html">Sign In</a></li>
         </ul>
       </div>
       <div class="Companydiv">
       <h3>Company</h3>
       <ul>
-        <li><a href="#">Terms & Conditions</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Cookies Preferences</a></li>
+        <li><a href="#FAQs">Terms & Conditions</a></li>
+        <li><a href="#FAQs">Privacy Policy</a></li>
+        <li><a href="#FAQs">Cookies Preferences</a></li>
       </ul>
       </div>
       <div class="Downloaddiv">
       <h3>Download App</h3>
-      <button class="Gplay-btn"><img src="img-landingpage/Google-play.png" />Google Play</button>
-      <button class="Appstore-btn"><img src="img-landingpage/App-store.png" />App Store</button>
+      <button class="Gplay-btn" onclick="location.href='#'"  ><img src="img-landingpage/Google-play.png" />Google Play</button>
+      <button class="Appstore-btn" onclick="location.href='#'"><img src="img-landingpage/App-store.png" />App Store</button>
       </div>
     </div>
       <hr class="Bottomline">
