Finalize front end

--- a/Tasks.html
+++ b/Tasks.html
@@ -157,11 +157,11 @@
 
         <div class="navicons">
             <img src="Icons/Dash.png" > 
-            <a href="#">Dashboard</a>
+            <a href="Dashboard.html">Dashboard</a>
         </div>
         <div class="navicons">
             <img src="Icons/tasks.png" style="width: 38px; height: 38px;">
-            <a href="#"><span class="Tasks-link">Tasks</span></a>
+            <a href="Tasks.html"><span class="Tasks-link">Tasks</span></a>
         </div>
         <div class="navicons">
             <img src="Icons/Calender.png" >
@@ -169,11 +169,11 @@
         </div>
         <div class="navicons">
             <img src="Icons/Doc.png" style="width: 27px; height: 32px;" >
-            <a href="#">Document</a>
+            <a href="document.html">Document</a>
         </div>
         <div class="navicons">
             <img src="Icons/Trash.png" >
-            <a href="#">Trash</a>
+            <a href="Trash.html">Trash</a>
         </div>
     </div>
 
