--- a/Trash.html
+++ b/Trash.html
@@ -136,18 +136,18 @@
     <div class="side-nav">
         <div class="navicons">
             <img src="Icons/Foucs.png" >
-            <a href="#">FocusBox</a>
+            <a href="index.html">FocusBox</a>
         </div>
 
         <!-- <hr class="fits-line"> -->
 
         <div class="navicons">
             <img src="Icons/Dash.png" > 
-            <a href="#">Dashboard</a>
+            <a href="Dashboard.html">Dashboard</a>
         </div>
         <div class="navicons">
             <img src="Icons/normtask.png" style="width: 38px; height: 38px;">
-            <a href="#">Tasks</a>
+            <a href="Tasks.html">Tasks</a>
         </div>
         <div class="navicons">
             <img src="Icons/Calender.png" >
@@ -155,11 +155,11 @@
         </div>
         <div class="navicons">
             <img src="Icons/Doc.png" style="width: 27px; height: 32px;" >
-            <a href="#">Document</a>
+            <a href="document.html">Document</a>
         </div>
         <div class="navicons">
             <img src="Icons/Trashactive.png" >
-            <a href="#"><span class="Tasks-link">Trash</span></a>
+            <a href="Trash.html"><span class="Tasks-link">Trash</span></a>
         </div>
     </div>
 
