--- a/document.html
+++ b/document.html
@@ -143,11 +143,11 @@
 
         <div class="navicons">
             <img src="Icons/Dash.png" > 
-            <a href="#">Dashboard</a>
+            <a href="Dashboard.html">Dashboard</a>
         </div>
         <div class="navicons">
             <img src="Icons/normtask.png" style="width: 38px; height: 38px;">
-            <a href="#">Tasks</a>
+            <a href="Tasks.html">Tasks</a>
         </div>
         <div class="navicons">
             <img src="Icons/Calender.png" >
@@ -155,11 +155,11 @@
         </div>
         <div class="navicons">
             <img src="Icons/Docactive.png" style="width: 27px; height: 32px;" >
-            <a href="#"><span class="Tasks-link">Document</span></a>
+            <a href="document.html"><span class="Tasks-link">Document</span></a>
         </div>
         <div class="navicons">
             <img src="Icons/Trash.png" >
-            <a href="#">Trash</a>
+            <a href="Trash.html">Trash</a>
         </div>
     </div>
 
