--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
       <h3>Company</h3>
       <ul>
         <li><a href="#FAQs">Terms & Conditions</a></li>
-        <li><a href="#FAQs">Privacy Policy</a></li>
+        <li><a href="Dashboard.html">Privacy Policy</a></li>
         <li><a href="#FAQs">Cookies Preferences</a></li>
       </ul>
       </div>
